...
                    perform {
                        fileOperations.requestRename(item.url)
                    }
                }

                ExplorerContextMenuActionButton(
                    title: "Compress to ZIP",
                    systemImage: "archivebox",
                    isEnabled: fileOperations.isPerforming == false
                ) {
                    perform {
                        fileOperations.compress(item.url)
                    }
...
